--- a/Risks.html
+++ b/Risks.html
@@ -3,13 +3,17 @@
 <head>
     <title>Risks</title>
     <link rel="icon" href="Logo.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=QuickSand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Quicksand;
             background-color: #ECFFDC;
             color: #333;
             margin: 0;
             padding: 0;
+            font-size: 10px;
         }
        .header {
             background-color: #00A36C;
@@ -19,6 +23,7 @@
             position: fixed;
             width: 100%;
             height: 15%;
+            font-family: Saira Condensed, sans-serif;
 
         }
         .header img{
@@ -49,6 +54,16 @@
             margin-bottom: 1rem;
             margin:20px;
         }
+        h2 {
+            font-family: Oswald;
+            font-size: 50px;
+        }
+        p {
+            font-family: quicksand; font;
+        }
+        li {
+            font-family: quicksand; font;
+        }
         </style>
 </head>
 <body>
@@ -59,9 +74,10 @@
         <h1>Sustainable Agriculture</h1>
     </div>
 <br>
+<br>
 <div class="text-container">
     <br>
-    <h1>Risks</h1>
+    <h2>Risks</h2>
     <p>Not using sustainable agricultural techniques or unsustainable agriculture can pose a great risk to human health. 
         Some unsustainable practices can reduce the yield and nutritional value of the crops. Non-organic fertilizers and
         high-risk pesticides are an example that contaminates the soil of the crops.</p>
@@ -135,7 +151,7 @@
     </style>
     </head>
     <body>
-    <h1>Interactive Map Quiz</h1>
+    <h2>Interactive Map Quiz</h2>
     <div class="map-container">
         <img id="sprite" src="hen.png" alt="Sprite" style="
             position: absolute;
