--- a/Sustainable Practices.html
+++ b/Sustainable Practices.html
@@ -3,9 +3,12 @@
 <head>
     <title>Sustainable Practices</title>
     <link rel="icon" href="Logo.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=QuickSand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: quicksand; font;
             background-color: #ECFFDC;
             color: #333;
             margin: 0;
@@ -28,6 +31,7 @@
             transform: translateY(-50%);
             height: 80%;
             margin-left: 10px;
+            font-family: Saira Condensed, sans-serif;
         }
         .container {
             width: 80%;
@@ -49,6 +53,16 @@
             margin-bottom: 1rem;
             margin:20px;
         }
+        h2 {
+            font-family: Oswald;
+            font-size: 50px;
+        }
+        p {
+            font-family: quicksand; font;
+        }
+        li {
+            font-family: quicksand; font;
+        }
         </style>
 </head>
 <body>
@@ -61,7 +75,7 @@
 <br>
 <div class="text-container">
     <br>
-    <h1>Sustainable Agricultural Practices</h1>
+    <h2>Sustainable Agricultural Practices</h2>
     <p>Each and every part of the supply chain must implement different techniques to ensure that sustainable agriculture 
         is achieved. These practices include:</p>
     <ul>
@@ -161,7 +175,7 @@
     </style>
     </head>
     <body>
-    <h1>Interactive Map Quiz</h1>
+    <h2>Interactive Map Quiz</h2>
     <div class="map-container">
         <img id="sprite" src="sheep.png" alt="Sprite" style="
             position: absolute;
