--- a/What is Sustainable Agriculture.html
+++ b/What is Sustainable Agriculture.html
@@ -3,9 +3,12 @@
 <head>
     <title>What is Sustainable Agriculture</title>
     <link rel="icon" href="Logo.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=QuickSand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: quicksand; font
             background-color: #ECFFDC;
             color: #333;
             margin: 0;
@@ -19,7 +22,7 @@
             position: fixed;
             width: 100%;
             height: 15%;
-
+            font-family: Saira Condensed, sans-serif;
         }
         .header img{
             position: absolute;
@@ -49,6 +52,16 @@
             margin-bottom: 1rem;
             margin:20px;
         }
+        h2 {
+            font-family: Oswald;
+            font-size: 50px;
+        }
+        p {
+            font-family: quicksand; font;
+        }
+        li {
+            font-family: quicksand; font;
+        }
         </style>
 </head>
 <body>
@@ -61,7 +74,7 @@
 <br>
 <div class="text-container">
     <br>
-    <h1>What is Sustainable Agriculture</h1>
+    <h2>What is Sustainable Agriculture</h2>
     <p>Sustainable agriculture is a way to ensure that farming, one of the biggest and most important industries, runs 
         sustainability in the most efficient way. To ensure sustainable agriculture is achieved many people have to pitch
         in and work together as the agricultural industry not only includes the farmers but also the food processors, 
@@ -134,7 +147,7 @@
 </style>
 </head>
 <body>
-<h1>Interactive Map Quiz</h1>
+<h2>Interactive Map Quiz</h2>
 <div class="map-container">
     <img id="sprite" src="rabbit.png" alt="Sprite" style="
         position: absolute;
