--- a/Why is Sustainable Agriculture Necessary.html
+++ b/Why is Sustainable Agriculture Necessary.html
@@ -3,9 +3,12 @@
 <head>
     <title>The need of Sustainable Agriculture</title>
     <link rel="icon" href="Logo.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=QuickSand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: quicksand; font;
             background-color: #ECFFDC;
             color: #333;
             margin: 0;
@@ -28,6 +31,7 @@
             transform: translateY(-50%);
             height: 80%;
             margin-left: 10px;
+            font-family: Saira Condensed, sans-serif;
         }
         .container {
             width: 80%;
@@ -49,6 +53,16 @@
             margin-bottom: 1rem;
             margin:20px;
         }
+        h2 {
+            font-family: Oswald;
+            font-size: 50px;
+        }
+        p {
+            font-family: quicksand; font;
+        }
+        li {
+            font-family: quicksand; font;
+        }
         </style>
 </head>
 <body>
@@ -61,7 +75,7 @@
 <br>
 <div class="text-container">
     <br>
-    <h1>Why is Sustainable Agricultural Neccesary? </h1>
+    <h2>Why is Sustainable Agricultural Neccesary? </h2>
     <p>Sustainable farming is crucial for a multiple of reasons such as saving water, reducing pollution from chemical 
         fertilizers and pesticides, and preventing soil from eroding. This method of farming helps the farmers conserve 
         resources therefore they can save their money on supplies. Additionally, it makes sure that these resources are 
@@ -101,15 +115,6 @@
             
         }
     
-        .sprite {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            top: 50%;
-            left: 50%;
-            transition: top 1s, left 1s;
-        }
         .quiz-container {
             margin-top: 20px;
         }
@@ -152,7 +157,7 @@
     </style>
     </head>
     <body>
-    <h1>Interactive Map Quiz</h1>
+    <h2>Interactive Map Quiz</h2>
     <div class="map-container">
         <img id="sprite" src="monkey.png" alt="Sprite" style="
             position: absolute;
