--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="en">
 <head>
     <title>Sustainable Agriculture</title>
     <link rel="icon" href="Logo.png" type="image/png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=QuickSand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: quicksand; font
             background-color: #f0f8ff;
             color: #333;
             margin: 0;
@@ -19,7 +21,7 @@
             position: fixed;
             width: 100%;
             height: 15%;
-
+            font-family: Saira Condensed, sans-serif;
         }
         .header img{
             position: absolute;
@@ -53,6 +55,16 @@
         }
         .section nav button:hover {
             background-color: #AFE1AF;
+        }
+        h2 {
+            font-family: Oswald;
+            font-size: 30px;
+        }
+        p {
+            font-family: quicksand; font;
+        }
+        li {
+            font-family: quicksand; font;
         }
     </style>
 </head>
